--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-left: 1%;">
+        <div class="container-fluid">
+            <a class="navbar-brand" style="font-size: 150%; font-family: 'Josefin Sans'" href="resume.html">Profile</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" style="font-size: 125%; font-family: 'Josefin Sans'"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Theme
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item d-flex align-items-center"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    data-bs-theme-value="light">Light</a>
+                            </li>
+                            <li><a class="dropdown-item d-flex align-items-center"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    data-bs-theme-value="dark">Dark</a>
+                            </li>
+                            <li><a class="dropdown-item d-flex align-items-center"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    data-bs-theme-value="auto">Auto</a>
+                            </li>
+                        </ul>
+                    </li>
+
+            </div>
+        </div>
+    </nav>
+
     <div class="container" style="padding-top: 1%;">
         <h1 class="text-center" style="font-family: 'M PLUS Rounded 1c'">MKXDM1CK3Y's Profile</h1>
     </div>
