--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MKXDM1CK3Y's About</title>
+    <title>MKXDM1CK3Y's Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="/design/css/style.css" rel="stylesheet">
@@ -17,34 +17,36 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-left: 1%;">
         <div class="container-fluid">
-            <a class="navbar-brand" style="font-size: 150%; font-family: 'Josefin Sans'" href="index.html">Profile</a>
+            <a class="navbar-brand" style="font-size: 150%; font-family: 'M PLUS Rounded 1c'" href="profile.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                
+                <div class="navbar-nav">
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="font-size: 125%; font-family: 'Josefin Sans'"
+                        <a class="nav-link dropdown-toggle" style="font-size: 150%; font-family: 'M PLUS Rounded 1c'"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Theme
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
                                     data-bs-theme-value="light">Light</a>
                             </li>
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
                                     data-bs-theme-value="dark">Dark</a>
                             </li>
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 100%; font-family: 'Josefin Sans'"
+                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
                                     data-bs-theme-value="auto">Auto</a>
                             </li>
                         </ul>
                     </li>
 
+                </div>
             </div>
         </div>
     </nav>
