--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-left: 1%;">
         <div class="container-fluid">
-            <a class="navbar-brand" style="font-size: 150%; font-family: 'M PLUS Rounded 1c'" href="index.html">Home</a>
+            <a class="navbar-brand" style="font-size: 150%; font-family: 'Josefin Sans'" href="index.html">Profile</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
