--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
                 <div class="navbar-nav">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="font-size: 150%; font-family: 'M PLUS Rounded 1c'"
+                        <a class="nav-link dropdown-toggle" style="font-size: 125%; font-family: 'Josefin Sans'"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Theme
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
                                     data-bs-theme-value="light">Light</a>
                             </li>
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
                                     data-bs-theme-value="dark">Dark</a>
                             </li>
                             <li><a class="dropdown-item d-flex align-items-center"
-                                    style="font-size: 125%; font-family: 'M PLUS Rounded 1c'"
+                                    style="font-size: 100%; font-family: 'Josefin Sans'"
                                     data-bs-theme-value="auto">Auto</a>
                             </li>
                         </ul>
