--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Bios</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My
             nickname is Mickey. You can call me "Mick".</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
         <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Career/Hobbies</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are
             playing video games, watching anime, and coding.</p>
