Toggle Page-Website

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
 
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="about.html">About</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="bios.html">Bios</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="music.html">Music</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="games.html">Games</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="anime.html">Anime</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="manga.html">Manga</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'"
+                        href="progress.html">Progress</a>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" style="font-size: 125%; font-family: 'Josefin Sans'"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -45,8 +54,6 @@
                             </li>
                         </ul>
                     </li>
-
-                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'; padding-left: 1300px;" href="..\web\index.html">Website</a>
 
                 </div>
             </div>
