--- a/web/bios.html
+++ b/web/bios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MKXDM1CK3Y's Website</title>
+    <title>MKXDM1CK3Y's Bios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="/design/css/style.css" rel="stylesheet">
@@ -24,6 +24,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
+
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="about.html">About</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="bios.html">Bios</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="music.html">Music</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="games.html">Games</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="anime.html">Anime</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'" href="manga.html">Manga</a>
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'"
+                        href="progress.html">Progress</a>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" style="font-size: 125%; font-family: 'Josefin Sans'"
@@ -46,23 +55,19 @@
                         </ul>
                     </li>
 
-                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'; padding-left: 1300px;" href="..\web\index.html">Website</a>
-
                 </div>
             </div>
         </div>
     </nav>
 
     <div class="container" style="padding-top: 1%;">
-        <h1 class="text-center" style="font-family: 'M PLUS Rounded 1c'">MKXDM1CK3Y's Profile</h1>
+        <h1 class="text-center" style="font-family: 'M PLUS Rounded 1c'">MKXDM1CK3Y's Bios</h1>
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Bios</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My
             nickname is Mickey. You can call me "Mick".</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
-        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Career/Hobbies</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are
             playing video games, watching anime, and coding.</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">In the future, I
