--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
 
-                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'; padding-left: 1300px;"
+                    <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'"
                         href="..\web\index.html">Website</a>
 
                 </div>
