--- a/web/bios.html
+++ b/web/bios.html
@@ -65,13 +65,13 @@
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My
-            nickname is Mickey. You can call me "Mick".</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My nickname is
+            Mickey. You can call me "Mick".</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are
-            playing video games, watching anime, and coding.</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">In the future, I
-            want to be a Content Creator or Developer</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are playing video
+            games, watching anime, and coding.</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">In the future, I want to be a
+            Content Creator or Programmer/Developer.</p>
     </div>
 
     <div class="container text-center" style="padding-top: 1%; padding-bottom: 10%;">
