--- a/web/bios.html
+++ b/web/bios.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My nickname is
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My name is
             Mickey. You can call me "Mick".</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are playing video
