--- a/web/index.html
+++ b/web/index.html
@@ -66,7 +66,7 @@
 
     <div class="container" style="padding-top: 1%;">
         <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Bios</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My nickname is
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My name is
             Mickey. You can call me "Mick".</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
         <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Career/Hobbies</p>
