--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'"
-                        href="..\web\index.html">Website</a>
+                        href="\web\index.html">Website</a>
 
                 </div>
             </div>
