--- a/web/music.html
+++ b/web/music.html
@@ -64,7 +64,21 @@
 
     <div class="container text-left" style="padding-top: 1%;">
         <p style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Music:</h3>
-        <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Coming Soon!</p>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/4YOPlZnKPksm8jCuqKg7gF?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/6ZiXlHu4qMD19tdnmtoHmQ?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/3otlapvPjUtSa9McMFspvo?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
     </div>
 
     <div class="container text-center" style="padding-top: 1%; padding-bottom: 10%;">
