--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <a class="nav-link" style="font-size: 125%; font-family: 'Josefin Sans'"
-                        href="\web\index.html">Website</a>
+                        href="..\web\index.html">Website</a>
 
                 </div>
             </div>
@@ -59,15 +59,12 @@
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Bios</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My name is
-            Mickey. You can call me "Mick".</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
-        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Career/Hobbies</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My hobbies are playing video
-            games, watching anime, and coding.</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">In the future, I want to be a
-            Content Creator or Programmer/Developer.</p>
+        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">ABOUT ME!</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Hello! I'm Mickey. AKA
+            MKXDM1CK3Y. Normally Play Video Games and Watch Anime.</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">If you enjoy my videos or live
+            streams, please help me by clicking the Subscribe / Follow button.</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Language: THAI / ENGLISH</p>
     </div>
 
     <div class="container text-center" style="padding-top: 1%; padding-bottom: 10%;">
