--- a/web/bios.html
+++ b/web/bios.html
@@ -63,9 +63,11 @@
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm MKXDM1CK3Y. My name is
-            Mickey. You can call me "Mick".</p>
-        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">My Birthday is 1st October.</p>
+        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">Bios</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">I'm Mickey. AKA MKXDM1CK3Y. My
+            full name is Pitipat Mickey.</p>
+        <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">You can call me "Mick". My
+            Birthday is 1st October.</p>
     </div>
 
     <div class="container text-center" style="padding-top: 1%; padding-bottom: 10%;">
