--- a/web/index.html
+++ b/web/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="container" style="padding-top: 1%;">
-        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">ABOUT ME!</p>
+        <p class="text-center" style="font-size: 200%; font-family: 'M PLUS Rounded 1c'">About Me!</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Hello! I'm Mickey. AKA
             MKXDM1CK3Y. Normally Play Video Games and Watch Anime.</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">If you enjoy my videos or live
