Follow and Subscribe

--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Hello! I'm Mickey. AKA
             MKXDM1CK3Y. Normally Play Video Games and Watch Anime.</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">If you enjoy my videos or live
-            streams, please help me by clicking the Subscribe / Follow button.</p>
+            streams, please help me by clicking the Follow and Subscribe button.</p>
         <p class="text-center" style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">Language: THAI / ENGLISH</p>
     </div>
 
