--- a/web/games.html
+++ b/web/games.html
@@ -79,20 +79,20 @@
         <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- MMR: Legendary Eagle (LE) && Faceit: Level 4</p>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Counter-Strike 2
         <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- MMR: 15,745 && Faceit: Level 4</p>
-        <a class="col" style="color: #8B8C90; font-size: 125%; font-family: 'Josefin Sans'"
+        <a class="col" style="color: #DE9B35; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://tracker.gg/csgo/profile/steam/76561198828671543/overview">CSGO/CS2 Tracker</a>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Apex Legend</p>
         <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- Master: 24,464 RP</p>
-        <a class="col" style="color: #8B8C90; font-size: 125%; font-family: 'Josefin Sans'"
+        <a class="col" style="color: #B93038; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://apex.tracker.gg/apex/profile/origin/MKXDM1CK3Y/overview">Apex Legend Tracker</a>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Valorant</p>
         <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- Platinum 3</p>
-        <a class="col" style="color: #8B8C90; font-size: 125%; font-family: 'Josefin Sans'"
+        <a class="col" style="color: #FD4556; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://tracker.gg/valorant/profile/riot/MKXDM1CK3Y%23MKXD/overview">Valorant Tracker</a>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Tom Clancy's Rainbow
             Six Siege</p>
         <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- Gold 3: 2,727 RP</p>
-        <a class="col" style="color: #8B8C90; font-size: 125%; font-family: 'Josefin Sans'"
+        <a class="col" style="color: #BFBA9F; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://r6.tracker.network/profile/pc/MKXDM1CK3Y">Tom Clancy's Rainbow
             Six Siege Tracker</a>
     </div>
