--- a/web/games.html
+++ b/web/games.html
@@ -101,7 +101,7 @@
                 href="https://osu.ppy.sh/users/12052182">Osu! Tracker</a>
             <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Thank You For Osu!Supporter</p>
             <a class="col" style="color: #ff66aa; font-size: 125%; font-family: 'Josefin Sans'"
-                href="url=https://osu.ppy.sh/users/30619807">-[Kirara]-</a>
+                href="https://osu.ppy.sh/users/30619807">-[Kirara]-</a>
     </div>
 
     <div class="container text-center" style="padding-top: 1%; padding-bottom: 10%;">
