--- a/web/games.html
+++ b/web/games.html
@@ -86,7 +86,7 @@
         <a class="col" style="color: #B93038; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://apex.tracker.gg/apex/profile/origin/MKXDM1CK3Y/overview">Apex Legend Tracker</a>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Valorant</p>
-        <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- Platinum 3</p>
+        <p style="font-size: 125%; font-family: 'M PLUS Rounded 1c'">- Diamond 1</p>
         <a class="col" style="color: #FD4556; font-size: 125%; font-family: 'Josefin Sans'"
             href="https://tracker.gg/valorant/profile/riot/MKXDM1CK3Y%23MKXD/overview">Valorant Tracker</a>
         <p style="font-size: 150%; font-family: 'M PLUS Rounded 1c'">* Tom Clancy's Rainbow
